# AUS-Lab

./: CUSTOM_RENDERER_README.md  HOW_THE_LLM_WORKS.md  MOUSE_FEATURE_IMPLEMENTATION_REPORT.md  MOUSE_INTERACTION_GUIDE.md  MOUSE_WORKAROUND.md  QUICKSTART_MOUSE.md  README.md  run_integration_test.py
agentic/: README.md  agentic_controller.py  agentic_system.py  api_translator.py  hive_mind.py  main.py  requirements.txt  run_agentic_system.py  run_simulation.py  server.py  test_env.py  test_gemini.py  translation_schema.py
agentic/tests/: test_agentic_controller.py
frontend/: index.html  package-lock.json  package.json
frontend/src/: App.css  App.test.tsx  App.tsx  Simulation.tsx
simulation/: FIXES_SUMMARY.md  README.md  TROUBLESHOOTING.md  api_schemas.py  click_capture.py  controllers.py  crash_log.txt  custom_renderer.py  hivemind_controller.py  main.py  manual_control.py  mouse_handler.py  requirements.txt  run_no_flicker.sh  run_with_fixes.sh  swarm.py  swarm_rust.py  test_pybullet_events.py  test_simulation.sh
simulation/rust_physics/: Cargo.toml
simulation/rust_physics/src/: lib.rs
simulation/tests/: test_swarm.py
web_simulation/: index.html  package-lock.json  package.json
web_simulation/public/models/: drone.glb
web_simulation/src/: App.css  App.tsx  index.css
web_simulation/src/components/: ControlPanel.tsx  DroneSwarm.tsx  ModelTest.tsx  SimulationCanvas.tsx  StateDisplay.tsx
web_simulation/src/hooks/: useCommands.ts  useWebSocket.ts
web_simulation/src/store/: simulationStore.ts
web_simulation/src/types/: simulation.ts
